gap fix

--- a/src/styles/module/gall/gall.scss
+++ b/src/styles/module/gall/gall.scss
@@ -252,8 +252,6 @@
             display: flex;
             flex-wrap: wrap;
             // gap: 2rem;
-            margin-left: -1rem;
-            margin-right: -1rem;
             // @include media-breakpoint-up(md) {
             //    gap: 5rem;
             // }
